Add: data analysis file

--- a/pbl_exp/preprocessing.ipynb
+++ b/pbl_exp/preprocessing.ipynb
@@ -24,7 +24,7 @@
     "# .env 파일 불러오기\n",
     "load_dotenv()\n",
     "\n",
-    "BASE_NAME = \"1-0s\"\n",
+    "BASE_NAME = \"1-0f\"\n",
     "\n",
     "SYNC_LOG_INPUT_PATH = os.path.join(os.getenv('BASE_PATH'), 'pbl_exp', 'data', 'origin', f'sync_test_log_{BASE_NAME}.csv')\n",
     "TEGRA_LOG_INPUT_PATH = os.path.join(os.getenv('BASE_PATH'), 'pbl_exp', 'data', 'origin', f'tegra_log_{BASE_NAME}.txt')\n",
